--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "allowSyntheticDefaultImports": true,
     "resolveJsonModule": true,
     "importHelpers": true,
-    "outDir": "./dist/out-tsc",
+    "outDir": "docs/out-tsc",
     "baseUrl": "src",
     "sourceMap": true,
     "declaration": false,
@@ -13,8 +13,13 @@
     "experimentalDecorators": true,
     "skipLibCheck": true,
     "target": "es5",
-    "typeRoots": ["node_modules/@types"],
-    "lib": ["es2016", "dom"],
+    "typeRoots": [
+      "node_modules/@types"
+    ],
+    "lib": [
+      "es2016",
+      "dom"
+    ],
     "module": "es2015"
   }
 }
